# nowcast-gdp

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: task.yml
.github/workflows/: add-to-project.yml  ci.yml
config/: series.toml
src/nowcast_gdp/: alfred.py  dataio.py  dates.py  ingest_alfred.py  io.py  registry.py  smoke.py
src/nowcast_gdp/baselines/: __init__.py  __main__.py  bl0.py  bl1.py
tests/: test_alfred_smoke.py  test_baseline_bl0.py  test_baseline_bl1.py  test_dataio.py  test_dates.py  test_index_csv.py  test_ingest_persist.py  test_io_index.py  test_quarters.py  test_smoke.py
