[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nowcast-gdp"
version = "0.0.1"
description = "Real-time GDP nowcasting toolkit (MVP scaffold)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "rkendev" }]
# Optional but recommended:
# license = { file = "LICENSE" }
dependencies = ["requests>=2.31"]  # add runtime deps later

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Repository = "https://github.com/rkendev/nowcast-gdp"

# --- Setuptools: make src/ layout work ---
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# --- Pytest config ---
[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "smoke: minimal end-to-end tests (may need network/API key)",
    "slow: long-running tests (skip by default in unit runs)",
    "integration: broader integration tests (may need network/API key)",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]  # import sorting
